<resources>
    <string name="app_name">Magic Path</string>
    <string name="app_description">Becoming Aware</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_challenge">Challenge</string>
    <string name="navigation_drawer_journal">Journal</string>
    <string name="navigation_drawer_statistics">Statistics</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_help">Help</string>
    <string name="navigation_drawer_upgrade">Premium Version</string>
    <string name="navigation_drawer_feedback">Feedback</string>

    <!-- Strings related to Settings -->
    <string name="fragment_settings">Settings</string>
    <string name="pref_header_initial_reminder">Initial reminder</string>
    <string name="pref_header_constant_reminder">Constant reminder</string>
    <string name="pref_header_final_reminder">Final reminder</string>
    <string name="pref_header_challenges_language">Challenges Language</string>

    <string name="pref_reminder_show_notification">Show notifications</string>

    <string name="pref_reminder_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_reminder_vibrate">Vibrate</string>

    <string name="pref_time_never" translatable="false">-1</string>
    <string name="pref_time_random" translatable="false">-2</string>

    <string name="pref_never">Never</string>
    <string name="pref_random_6_12">Random between 6am and 12pm</string>
    <string name="pref_random_18_24">Random between 6pm and 12am</string>
    <string name="pref_every_1_hour">Every hour</string>
    <string name="pref_every_2_hours">Every 2 hours</string>
    <string name="pref_every_3_hours">Every 3 hours</string>
    <string name="pref_every_4_hours">Every 4 hours</string>

    <string name="pref_language_en">English</string>
    <string name="pref_language_ru">Russian</string>

    <string name="pref_privacy_policy">Privacy Policy</string>

    <string-array name="pref_initial_reminder_list_titles" translatable="false">
        <item>@string/pref_never</item>
        <item>6am</item>
        <item>8am</item>
        <item>10am</item>
        <item>12pm</item>
        <item>@string/pref_random_6_12</item>
    </string-array>
    <string-array name="pref_initial_reminder_list_values" translatable="false">
        <item>@string/pref_time_never</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>@string/pref_time_random</item>
    </string-array>

    <string-array name="pref_final_reminder_list_titles" translatable="false">
        <item>@string/pref_never</item>
        <item>6pm</item>
        <item>8pm</item>
        <item>10pm</item>
        <item>12am</item>
        <item>@string/pref_random_18_24</item>
    </string-array>
    <string-array name="pref_final_reminder_list_values" translatable="false">
        <item>@string/pref_time_never</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>@string/pref_time_random</item>
    </string-array>

    <string-array name="pref_constant_reminder_list_titles">
        <item>@string/pref_never</item>
        <item>@string/pref_every_1_hour</item>
        <item>@string/pref_every_2_hours</item>
        <item>@string/pref_every_3_hours</item>
        <item>@string/pref_every_4_hours</item>
    </string-array>
    <string-array name="pref_constant_reminder_list_values" translatable="false">
        <item>@string/pref_time_never</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="pref_language_titles">
        <item>@string/pref_language_en</item>
        <item>@string/pref_language_ru</item>
    </string-array>
    <string-array name="pref_language_list_values" translatable="false">
        <item>en</item>
        <item>ru</item>
    </string-array>

    <string-array name="levels">
        <item>@string/challenge_level_low</item>
        <item>@string/challenge_level_medium</item>
        <item>@string/challenge_level_high</item>
    </string-array>

    <string-array name="ratings" translatable="false">
        <item>☆☆☆☆</item>
        <item>★☆☆☆</item>
        <item>★★☆☆</item>
        <item>★★★☆</item>
        <item>★★★★</item>
    </string-array>

    <string name="pref_restart_needed_title">Restart is required</string>
    <string name="pref_restart_needed_message">Please restart the app</string>

    <!-- Fragment Challenge -->
    <string name="challenge_current">Current Challenge</string>
    <string name="fragment_challenge_journal_entry">Journal Entry</string>
    <string name="fragment_challenge_accept">Accept</string>
    <string name="fragment_challenge_return_after_6pm">Return after 6PM</string>
    <string name="fragment_challenge_can_start_task_before_6p_only">You can accept task before 6pm</string>
    <string name="fragment_challenge_finish">Finish</string>
    <string name="fragment_challenge_finished">Finished</string>
    <string name="fragment_challenge_declined">Declined</string>
    <string name="fragment_challenge_status">Status: %s</string>
    <string name="fragment_challenge_type">Type: %s</string>
    <string name="fragment_challenge_level">Difficulty: %s</string>
    <string name="fragment_challenge_menu_share">Share</string>
    <string name="fragment_challenge_comments_hint">Describe your experience to see it in the journal</string>

    <!-- Challenge types -->
    <string name="challenge_type_sid">Stop Internal Dialog</string>

    <!-- Challenge levels -->
    <string name="challenge_level_low">low</string>
    <string name="challenge_level_medium">medium</string>
    <string name="challenge_level_high">high</string>

    <!-- Fragment Challenge List -->
    <string name="fragment_challenge_list">Finished Challenges</string>
    <string name="fragment_challenge_list_empty_text">There are no finished challenges yet</string>
    <string name="challenges_filter">Filter</string>

    <!-- Filter challenges Fragment -->
    <string name="filter_challenges_title" translatable="false">Choose filter</string>

    <!-- Help -->
    <string name="fragment_help_text">"A new task is available every morning; it can be taken or skipped. To start the task, click \"Accept\" button in the \"Challenge\" screen. The practice continues during the day and finishes at night. You can finish the task after 6pm by clicking on \"Finish\" button. You will be suggested to estimate your level of awareness while doing this task.\n\nThe finished tasks are recorded in the \"Journal\" screen.\n\nEvery task has its own difficulty level. More difficult tasks will be given with time.\n\nThe \"Statistics\" screen shows charts with the number of finished tasks and level of awareness over time.\n\nYou can enable reminders in the \"Settings\" which can help you in daily practice."
    </string>
    <string name="fragment_help_version">Lankastersky Studio\nVersion %s</string>
    <string name="fragment_help">Help</string>

    <!-- Statistics -->
    <string name="fragment_statistics">Statistics</string>
    <string name="fragment_statistics_level">Difficulty: %s</string>
    <string name="fragment_statistics_average_rating">Average level of consciousness: %d%%</string>
    <string name="fragment_statistics_challenges_for_levelup">Challenges left for the level-up: %d</string>
    <string name="fragment_statistics_finished_challenges_number">Finished challenges: %d of %d
    </string>
    <string name="fragment_statistics_finished_challenges_plot_title">Finished challenges</string>
    <string name="fragment_statistics_consciousness_plot_title">Level of consciousness, %</string>
    <string name="fragment_statistics_line_chart">Line chart</string>
    <string name="fragment_statistics_bar_chart">Bar chart</string>

    <!-- Notifications -->
    <string name="notification_challenge_start">New challenge available</string>
    <string name="notification_challenge_finish">Finish your challenge</string>

    <!-- Feedback -->
    <string name="feedback_send_email">Send email</string>

    <!-- Rank dialog -->
    <string name="rank_dialog_title">Estimate your level of consciousness</string>
    <string name="rank_dialog_rate">Rate</string>

    <!-- Alert dialogs -->

    <!-- Level up -->
    <string name="dialog_title_next_level_available">Next level is available</string>
    <string name="dialog_text_next_level_available">Congratulations! Challenges of the %s level are
        available now and will be assigned to you soon.
    </string>

    <!-- Premium version dialog -->
    <string name="dialog_premium_title">Your are using Premium version</string>
    <string name="dialog_premium_features">Features available:\n- Different levels of challenges\n- Statistics charts\n- No ads</string>

    <!-- Upgrade dialog -->
    <string name="upgrade_dialog_title">Premium version features:</string>
    <string name="upgrade_dialog_promo_title">Premium version is available now:</string>
    <string name="upgrade_dialog_levels">- Different levels of challenges</string>
    <string name="upgrade_dialog_statistics">- Statistics charts</string>
    <string name="upgrade_dialog_no_ads">- No ads</string>
    <string name="upgrade_dialog_one_time_purchase">One-time purchase</string>
    <string name="upgrade_dialog_buy">Buy</string>
    <string name="upgrade_dialog_subscription">Monthly subscription</string>
    <string name="upgrade_dialog_subscribe">Subscribe</string>

    <!-- Billing service -->
    <string name="dialog_title_failed_get_purchases">Failed to get purchases list</string>
    <string name="dialog_text_billing_service_unavailable">Billing service is unavailable. Try again later.</string>

    <!-- Firebase error -->
    <string name="dialog_title_something_wrong">Something is wrong</string>
    <string name="dialog_text_failed_to_connect">Failed to connect to the server. Try again later.</string>
    <string name="dialog_text_failed_to_load_challenges">Failed to load challenges. Try to restart the app.</string>
    <string name="filter_challenges_by_rating">Filter by level of consciousness</string>
    <string name="filter_challenges_by_level">Filter by difficulty</string>

    <!-- AdMob constants -->
    <string name="admob_app_id" translatable="false">ca-app-pub-4142226708429553~1657176734</string>
    <string name="banner_challenge" translatable="false">ca-app-pub-4142226708429553/1402009957</string>

  <string name="purchase_extended_version" translatable="false">extended_version</string>
  <string name="purchase_extended_version_monthly_subscription" translatable="false">extended_version_monthly_subscription</string>
  <string name="purchase_test_purchased" translatable="false">android.test.purchased</string>
</resources>
