<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="pref_show_notification"
        android:title="@string/pref_reminder_show_notification"/>

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <!--
    <Preference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="pref_show_notification"
        android:key="notification_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_reminder_ringtone"/>
    -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:dependency="pref_show_notification"
        android:key="notification_vibrate"
        android:title="@string/pref_reminder_vibrate"/>

    <ListPreference
        android:defaultValue="@string/pref_time_random"
        android:dependency="pref_show_notification"
        android:entries="@array/pref_initial_reminder_list_titles"
        android:entryValues="@array/pref_initial_reminder_list_values"
        android:key="pref_initial_reminder_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_header_initial_reminder"/>

    <ListPreference
        android:defaultValue="3"
        android:dependency="pref_show_notification"
        android:entries="@array/pref_constant_reminder_list_titles"
        android:entryValues="@array/pref_constant_reminder_list_values"
        android:key="pref_constant_reminder_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_header_constant_reminder"/>

    <ListPreference
        android:defaultValue="@string/pref_time_random"
        android:dependency="pref_show_notification"
        android:entries="@array/pref_final_reminder_list_titles"
        android:entryValues="@array/pref_final_reminder_list_values"
        android:key="pref_final_reminder_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_header_final_reminder"/>

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="pref_show_challenges"
        android:title="Show Challenges"/>

    <ListPreference
        android:defaultValue="@string/pref_language_ru"
        android:entries="@array/pref_language_titles"
        android:entryValues="@array/pref_language_list_values"
        android:key="pref_challenges_locale"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_header_challenges_language"/>

    <Preference android:title="@string/pref_upgrade"
        android:key="pref_upgrade"/>

    <Preference android:title="@string/pref_privacy_policy"
        android:key="pref_privacy_policy"/>

</PreferenceScreen>
