<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.hcyclone.zen.view.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/statistics_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontFamilyMedium"
            android:text="@string/fragment_statistics_level"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/statistics_finished_challenges_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontFamilyMedium"
            android:text="@string/fragment_statistics_finished_challenges_number"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/statistics_average_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontFamilyMedium"
            android:paddingBottom="8dp"
            android:text="@string/fragment_statistics_average_rating"
            android:textSize="16sp"/>

    </LinearLayout>

    <com.androidplot.xy.XYPlot
        android:id="@+id/bar_plot_challenges"
        style="@style/APDefacto.Light"
        androidPlot.graph.backgroundPaint.color="white"
        androidPlot.graph.linesPerDomainLabel="2"
        androidPlot.graph.linesPerRangeLabel="2"
        androidPlot.legend.visible="false"
        androidPlot.plotMarginBottom="0dp"
        androidPlot.plotMarginLeft="0dp"
        androidPlot.plotMarginRight="0dp"
        androidPlot.plotMarginTop="0dp"
        androidPlot.rangeTitle.visible="false"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        ap:backgroundColor="@android:color/white"
        ap:gridClippingEnabled="false"
        ap:title="@string/fragment_statistics_finished_challenges_plot_title"
    />

    <com.androidplot.xy.XYPlot
        android:id="@+id/bar_plot_rates"
        style="@style/APDefacto.Light"
        androidPlot.graph.backgroundPaint.color="white"
        androidPlot.graph.linesPerDomainLabel="2"
        androidPlot.graph.linesPerRangeLabel="2"
        androidPlot.legend.visible="false"
        androidPlot.plotMarginBottom="0dp"
        androidPlot.plotMarginLeft="0dp"
        androidPlot.plotMarginRight="0dp"
        androidPlot.plotMarginTop="0dp"
        androidPlot.rangeTitle.visible="false"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        ap:backgroundColor="@android:color/white"
        ap:gridClippingEnabled="false"
        ap:title="@string/fragment_statistics_consciousness_plot_title"
    />

    <com.androidplot.xy.XYPlot
        android:id="@+id/line_plot_challenges"
        style="@style/APDefacto.Light"
        androidPlot.graph.backgroundPaint.color="white"
        androidPlot.graph.linesPerDomainLabel="2"
        androidPlot.graph.linesPerRangeLabel="2"
        androidPlot.legend.visible="false"
        androidPlot.plotMarginBottom="0dp"
        androidPlot.plotMarginLeft="0dp"
        androidPlot.plotMarginRight="0dp"
        androidPlot.plotMarginTop="0dp"
        androidPlot.rangeTitle.visible="false"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        ap:backgroundColor="@android:color/white"
        ap:gridClippingEnabled="false"
        ap:lineLabelRotationBottom="-45"
        ap:lineLabels="left|bottom"
        ap:title="@string/fragment_statistics_finished_challenges_plot_title"
    />

    <com.androidplot.xy.XYPlot
        android:id="@+id/line_plot_rates"
        style="@style/APDefacto.Light"
        androidPlot.graph.backgroundPaint.color="white"
        androidPlot.graph.linesPerDomainLabel="2"
        androidPlot.graph.linesPerRangeLabel="2"
        androidPlot.legend.visible="false"
        androidPlot.plotMarginBottom="0dp"
        androidPlot.plotMarginLeft="0dp"
        androidPlot.plotMarginRight="0dp"
        androidPlot.plotMarginTop="0dp"
        androidPlot.rangeTitle.visible="false"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="@dimen/text_margin"
        android:visibility="gone"
        ap:backgroundColor="@android:color/white"
        ap:gridClippingEnabled="false"
        ap:lineLabelRotationBottom="-45"
        ap:lineLabels="left|bottom"
        ap:title="@string/fragment_statistics_consciousness_plot_title"/>

</LinearLayout>

</android.support.v4.widget.NestedScrollView>
